--- a/the-basics/index.html
+++ b/the-basics/index.html
@@ -6,6 +6,9 @@
         <title>Objects: the basics</title>
     </head>
     <body>
-        <script src="objects/objects.js"></script>
+        <!-- <script src="objects/objects.js"></script> -->
+        <!-- <script src="symbols/symbols.js"></script> -->
+        <script src="methods/methods.js"></script>
+        <!-- <script src="this/this.js"></script> -->
     </body>
 </html>
