--- a/the-basics/index.html
+++ b/the-basics/index.html
@@ -8,7 +8,6 @@
     <body>
         <!-- <script src="objects/objects.js"></script> -->
         <!-- <script src="symbols/symbols.js"></script> -->
-        <script src="methods/methods.js"></script>
-        <!-- <script src="this/this.js"></script> -->
+        <script src="methods+this/methods+this.js"></script>
     </body>
 </html>
