--- a/the-basics/index.html
+++ b/the-basics/index.html
@@ -8,6 +8,7 @@
     <body>
         <!-- <script src="objects/objects.js"></script> -->
         <!-- <script src="symbols/symbols.js"></script> -->
-        <script src="methods+this/methods+this.js"></script>
+        <!-- <script src="methods+this/methods+this.js"></!-->
+        <script src="constructor/constructor.js"></script>
     </body>
 </html>
