--- a/advanced-functions/index.html
+++ b/advanced-functions/index.html
@@ -5,5 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Advanced working with functions</title>
     </head>
-    <body></body>
+    <body>
+        <script src="function-object/function-object.js"></script>
+    </body>
 </html>
