--- a/the-basics/index.html
+++ b/the-basics/index.html
@@ -9,6 +9,7 @@
         <!-- <script src="objects/objects.js"></script> -->
         <!-- <script src="symbols/symbols.js"></script> -->
         <!-- <script src="methods+this/methods+this.js"></!-->
-        <script src="constructor/constructor.js"></script>
+        <!-- <script src="constructor/constructor.js"></!-->
+        -->
     </body>
 </html>
