--- a/advanced-functions/index.html
+++ b/advanced-functions/index.html
@@ -6,6 +6,7 @@
         <title>Advanced working with functions</title>
     </head>
     <body>
-        <script src="function-object/function-object.js"></script>
+        <!-- <script src="function-object/function-object.js"></script> -->
+        <script src="decorators+call+apply/decorators+call+apply.js"></script>
     </body>
 </html>
