--- a/advanced-functions/index.html
+++ b/advanced-functions/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <!-- <script src="function-object/function-object.js"></script> -->
-        <script src="decorators+call+apply/decorators+call+apply.js"></script>
+        <!-- <script src="decorators+call+apply/decorators+call+apply.js"></script> -->
+        <!-- <script src="function-binding/function-binding.js"></script> -->
     </body>
 </html>
