--- a/advanced-functions/index.html
+++ b/advanced-functions/index.html
@@ -9,5 +9,6 @@
         <!-- <script src="function-object/function-object.js"></script> -->
         <!-- <script src="decorators+call+apply/decorators+call+apply.js"></script> -->
         <!-- <script src="function-binding/function-binding.js"></script> -->
+        <script src="arrow-functions/arrow-functions.js"></script>
     </body>
 </html>
