--- a/property-config/index.html
+++ b/property-config/index.html
@@ -6,7 +6,7 @@
         <title>Object properties configuration</title>
     </head>
     <body>
-        <script src="flags-and-descriptors/flags-and-descriptors.js"></script>
-        <!-- <script src="getters-and-setters/"></script> -->
+        <!-- <script src="flags-and-descriptors/flags-and-descriptors.js"></script> -->
+        <script src="getters-and-setters/getters-and-setters.js"></script>
     </body>
 </html>
