--- a/prototypal-inheritance/index.html
+++ b/prototypal-inheritance/index.html
@@ -6,6 +6,7 @@
         <title>Prototypes, inheritance</title>
     </head>
     <body>
-        <script src="prototypal-inheritance/prototypal-inheritance.js"></script>
+        <!-- <script src="prototypal-inheritance/prototypal-inheritance.js"></script> -->
+        <script src="function-prototype/function-prototype.js"></script>
     </body>
 </html>
