--- a/prototypal-inheritance/index.html
+++ b/prototypal-inheritance/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <!-- <script src="prototypal-inheritance/prototypal-inheritance.js"></script> -->
-        <script src="function-prototype/function-prototype.js"></script>
+        <!-- <script src="function-prototype/function-prototype.js"></script> -->
+        <script src="native-prototypes/native-prototypes.js"></script>
     </body>
 </html>
