--- a/prototypal-inheritance/index.html
+++ b/prototypal-inheritance/index.html
@@ -8,6 +8,7 @@
     <body>
         <!-- <script src="prototypal-inheritance/prototypal-inheritance.js"></script> -->
         <!-- <script src="function-prototype/function-prototype.js"></script> -->
-        <script src="native-prototypes/native-prototypes.js"></script>
+        <!-- <script src="native-prototypes/native-prototypes.js"></script> -->
+        <script src="prototype-methods/prototype-methods.js"></script>
     </body>
 </html>
